ros2_ws/log/build_2024-09-03_18-44-21/autonomo/stderr.log
  File "/home/frock/code/AyDpVA/ros2_ws/install/autonomo/lib/python3.12/site-packages/autonomo/publisher.py", line 2
    from std msgs.msg import String
             ^^^^
SyntaxError: invalid syntax

